<resources>

    <string name="app_name">GuideAndroid</string>
    <string name="menu_settings">Settings</string>
    
    <string name="title_activity_guide_main">Guide Android</string>
	<string name="title_activity_place_detail_activity">Place Details</string>
	<string name="title_activity_tour_detail_activity">Tour Details</string>
	<string name="title_map">Map</string>
	<string name="title_navigator">Navigate</string>
	
	<string name="main_current_location">This box shows your current location. Click to show the detail of this place</string>
	<string name="main_current_location2">Current Location: </string>
	<string name="main_search">Search</string>
	<string name="main_qr">QR</string>
	<string name="main_serch_box">Search Box</string>
	<string name="main_agenda_empty">Your agenda is empty. Add places to your agenda by pressing the + button at the top right of the screen when viewing a tour or location.</string>
	
	<string name="menu_add_agenda">Agenda</string>	
	<string name="menu_refresh">Refresh</string>
	<string name="menu_map">Map</string>
	<string name="menu_about">About</string>
	<string name="menu_sort_alphabetic">Sort: alphabetically</string>
	<string name="menu_sort_distance">Sort: by distance</string>
	<string name="menu_sort_category">Sort: by category</string>
	<string name="menu_navigator">Navigate</string>
	
	<string name="nav_label1">Start</string>
	<string name="nav_label2">Destination</string>
	<string name="nav_label3">Travel through</string>
	<string name="nav_label4">Agenda</string>
	<string name="nav_label5">Enter name of starting location</string>
	<string name="nav_label6">Enter name of destination</string>
	<string name="nav_label7">Find Path</string>
	<string name="nav_label8">Choose Tour</string>
	<string name="nav_label9">Find Path</string>
    <string name="nav_label10">Use current location</string>
	
	<string name="search_tv1">Name Snippet</string>
	<string name="search_tv2">Category</string>
	<string name="search_tv3">Distance Radius</string>
	<string name="search_et1">snippet</string>
	<string name="search_et2">feet</string>
	<string name="search_btn1">Search</string>
	<string name="search_btn2">Clear</string>
	
	<string name="search_cb1">Residence Hall</string>
	<string name="search_cb2">Recreation</string>
	<string name="search_cb3">Dining</string>
	<string name="search_cb4">Academics</string>
	<string name="search_cb5">Everything</string>
	<string name="search_cb6">Facility</string>
	<string name="search_cb7">Medical</string>
	<string name="search_cb8">Local</string>
	<string name="search_cb9">Athletics</string>
	<string name="search_cb10">Greek Life</string>
	<string name="search_cb11">Student Life</string>
	<string name="search_cb12">Misc.</string>
	<string name="search_cb13">Library</string>
	
	<string name="tour_manager_btn1">Create</string>
	<string name="tour_manager_btn2">Delete</string>
	<string name="tour_manager_btn3">Map</string>
	
	<string name="tour_editor_btn_done">Done</string>

    <item type="id" name="view_item_position" />
    <item type="id" name="view_item_checked_set" />
    <string name="current_location_unknown">Unknown</string>
    <string name="mark_as_visited">Mark as Visited</string>
    <string name="hide_panel">Hide Panel</string>

</resources>