<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item 
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:icon="@drawable/navigation_refresh"
        android:showAsAction="always" />
    
    <item
        android:id="@+id/menu_map"
        android:title="@string/menu_map"
        android:icon="@drawable/location_map"
        android:showAsAction="always"/>
    
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:icon="@drawable/action_about"
        android:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/menu_sort_alphabetic"
        android:title="@string/menu_sort_alphabetic"
        android:showAsAction="never" />
    
    <item 
        android:id="@+id/menu_sort_distance"
        android:title="@string/menu_sort_distance"
        android:showAsAction="never" />
    
</menu>
