<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/nav_ll_start"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nav_tv1"
            style="@style/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_label1" />

        <AutoCompleteTextView
            android:id="@+id/nav_actv1"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:hint="@string/nav_label5"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/nav_cb1"
            android:text="@string/nav_label10"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_ll_destination"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nav_tv2"
            style="@style/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_label2" />

        <AutoCompleteTextView
            android:id="@+id/nav_actv2"
            android:textSize="14sp"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:hint="@string/nav_label6" />

    </LinearLayout>


    <Button
        android:id="@+id/nav_btn"
        android:layout_margin="4dp"
        style="@style/description_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_label7" />

    <include layout="@layout/horizontal_line" />

</LinearLayout>